# bazel_demo_schema

./: MODULE.bazel  README.md
client/: BUILD.bazel  client.py
common/: BUILD.bazel  resources.py
data/: BUILD
protos/: BUILD
server/: BUILD.bazel  server.py
