load("@rules_python//python:defs.bzl", "py_library")

package(
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "resources",
    srcs = [
        "resources.py",
    ],
    data = ["//data:routeguide_features"],
    deps = [
        "//protos:routeguide_py_grpc",
    ],
)

